--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="lib/fontawesome-free-5.13.0-web/css/all.css">
     <link rel="stylesheet" href="style/main.css">
-    <title>Books</title>
+    <title>Appsus</title>
 </head>
 <body>
     <div id="app"></div>
